# xenia-admin

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
project/: initial_data.json  manage.py  management.json
project/management/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
project/management/migrations/: 0001_initial.py  0002_alter_cadastraldata_area_alter_cadastraldata_income_and_more.py  0002_property_cadastral_area_property_cadastral_category_and_more.py  0002_remove_reservation_apartment_and_more.py  0003_alter_property_cadastral_area_and_more.py  0003_alter_reservation_channel.py  0003_property_time_zone.py  0004_alter_cadastraldata_options_alter_host_options_and_more.py  0004_alter_property_cadastral_area_and_more.py  0004_alter_reservation_options_and_more.py  0005_alter_property_address_alter_property_cadastral_area_and_more.py  0005_property_created_at_property_updated_at.py  0005_remove_property_edit_link.py  0006_alter_host_birth_date_alter_host_birth_place_and_more.py  0006_property_booking_id.py  0006_remove_host_property_property_host.py  0007_alter_host_id_card_back_alter_host_id_card_front.py  0007_alter_property_latitude_alter_property_longitude.py  0007_remove_property_created_at_and_more.py  0008_cadastraldata_alter_property_options_and_more.py  (+7 more)
project/project/: admin.py  asgi.py  settings.py  translation.py  urls.py  wsgi.py
project/smoobu/: apps.py  models.py  tests.py  urls.py  views.py
project/templates/: base.html
project/website/: admin.py  apps.py  form.py  models.py  tests.py  urls.py  views.py
(+38 files in other folders)
